# Communication-tutorial

./: .gitignore  README.md  homework.md
Protobuf/: README.md
Protobuf/cpp/: CMakeLists.txt  test.cpp  test.pb.cc  test.pb.h  test.proto
Protobuf/csharp/: ProtobufTest.sln
Protobuf/csharp/Protobuf/: Message.cs
Protobuf/csharp/Test/: Program.cs  Test.csproj
gRPC/: README.md
gRPC/cpp/: CMakeLists.txt  client.cpp  pch.h  server.cpp
gRPC/cpp/proto/: MessageToClient.grpc.pb.cc  MessageToClient.grpc.pb.h  MessageToClient.pb.cc  MessageToClient.pb.h  MessageToClient.proto
gRPC/csharp/: CStest.sln
gRPC/csharp/gRPC/: runClient.cmd  runClient.sh  runServer.cmd  runServer.sh
gRPC/csharp/gRPC/Client/: Program.cs
gRPC/csharp/gRPC/Proto/: Message.proto  Proto.csproj
gRPC/csharp/gRPC/Server/: Program.cs  Server.csproj
